--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "devDependencies": {
     "chai": "^1.9.1",
     "mocha": "^1.21.4",
+    "node-inspector": "^0.7.4",
     "winston": "^0.8.0"
   },
   "dependencies": {
-    "azure": "^0.9.16"
+    "azure": "^0.10.0"
   }
 }
