--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^1.9.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-simple-mocha": "^0.4.0",
     "mocha": "^1.21.4",
-    "node-inspector": "^0.7.4",
     "winston": "^0.8.0"
   },
   "dependencies": {
