--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "winston-azuretable",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Azure Table Storage transport for Winston",
   "main": "./lib/winston-azuretable.js",
   "scripts": {
@@ -15,17 +15,17 @@
     "tools"
   ],
   "author": "Jason Poon <github@jasonpoon.ca>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "chai": "^1.9.1",
+    "chai": "^3.3.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-simple-mocha": "^0.4.0",
-    "mocha": "^1.21.5",
-    "winston": "^0.8.0"
+    "mocha": "^2.3.3",
+    "winston": "^1.1.0"
   },
   "dependencies": {
-    "azure": "^0.10.0"
+    "azure-storage": "^0.6.0"
   },
   "directories": {
     "test": "test"
