--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   "author": "Jason Poon <github@jasonpoon.ca>",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "grunt": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-simple-mocha": "^0.4.1",
-    "mocha": "^4.0.1",
-    "winston": "^2.4.0"
+    "chai": "4.1.2",
+    "grunt": "1.0.2",
+    "grunt-contrib-jshint": "1.1.0",
+    "grunt-simple-mocha": "0.4.1",
+    "mocha": "5.1.0",
+    "winston": "2.4.1"
   },
   "dependencies": {
-    "azure-storage": "^2.6.0"
+    "azure-storage": "2.8.1"
   },
   "directories": {
     "test": "test"
