--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "6"
+  - lts/*
 before_install:
-  - npm install grunt-cli -g
+  - npm install -g gulp-cli
 script: 
-  - grunt jshint
+  - gulp lint
 notifications:
   email: false
