--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "mocha test"
   },
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "keywords": [
     "winston",
     "azure",
@@ -18,14 +21,19 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "4.1.2",
-    "grunt": "1.0.2",
-    "grunt-contrib-jshint": "1.1.0",
-    "grunt-simple-mocha": "0.4.1",
-    "mocha": "5.1.0",
-    "winston": "2.4.1"
+    "eslint": "4.19.1",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-node": "6.0.1",
+    "eslint-plugin-mocha": "5.0.0",
+    "gulp": "3.9.1",
+    "gulp-eslint": "4.0.2",
+    "gulp-mocha": "5.0.0",
+    "mocha": "5.1.0"
   },
   "dependencies": {
-    "azure-storage": "2.8.1"
+    "azure-storage": "2.8.1",
+    "util": "0.10.3",
+    "winston": "2.4.1"
   },
   "directories": {
     "test": "test"
